# TrackingAlgoCollection

./: README.md
BoostingTracker/: BeyondSemiBoostingTracker.vcproj  BoostingTracker.vcproj  BoostingTrackers.vcproj  SemiBoostingTracker.vcproj
IVT/: drawbox.m  runtracker.m  trackparam.m
IVT/pca_comparison/: dog_windows.mat
L1-APG/: Demo_Car4.m  L1TrackingBPR_APGup.m  ReadMe.txt  corner2image.m
MIL/: CMakeLists.txt
MIL/data/david/: david_gt.txt
MIL/include/: cv_onlinemil.h  object_tracker.h
MIL/samples/: object_tracker_app.cpp
MIL/src/: cv_onlineboosting.cpp  cv_onlinemil.cpp  object_tracker.cpp
MeanShift/: kernelTracker.m
PFT/: license.txt
RCT/c++/CompressiveTrackingFromsequences/: CompressiveTracking.sln  readme.txt
RCT/c++/CompressiveTrackingFromsequences/CompressiveTracking/: CompressiveTracker.cpp  CompressiveTracker.h  CompressiveTracking.vcproj  RunTracker.cpp  TrackingResults.txt  config.txt
RCT/matlab/: FtrVal.mexw32  HaarFtr.m  Runtracker.m  classiferUpdate.m  getFtrVal.m  integral.mexw32  ratioClassifier.m
RCT/matlab/data/: init.txt
TLD/matlab/: run_TLD.m
VTD/: How to use the VTD code.txt
VTD/DSPCA/: DSPCA.m  sparse_rank_one_mex.mexglx  sparse_rank_one_mex.mexmaci  sparse_rank_one_mex.mexw32
VTD/OpenCV/0.97/Lib/: cvaux.lib  cxts.lib  trs.lib
VTD/PHASE/: edgelink.m  phasecong2.m
VTD/VTD/: VTD.sln
VTD/VTD/VTD/: ReadMe.txt  Track.cpp  Track.h  VTD.APS  VTD.cpp  VTD.h  VTD.rc  VTD.vcxproj  VTD.vcxproj.filters  VTDDlg.cpp  VTDDlg.h  resource.h  stdafx.cpp  targetver.h
VTD/VTD/VTD/Release/: CL.read.1.tlog  CL.write.1.tlog  (+12 more)
(+45 files in other folders)
